--- a/packages/addons-website/scss/components/_website-typeset-style.scss
+++ b/packages/addons-website/scss/components/_website-typeset-style.scss
@@ -89,8 +89,12 @@
     content: '';
     position: absolute;
     background: $carbon--gray-10;
-    height: 4rem;
+    height: 6rem;
     width: 1rem;
+
+    @include carbon--breakpoint('md') {
+      height: 4rem;
+    }
   }
 
   &:before {
@@ -115,6 +119,15 @@
   white-space: nowrap;
   padding-left: $spacing-05;
   padding-right: 0;
+  width: 100%;
+
+  @include carbon--breakpoint('md') {
+    width: 62.5%;
+  }
+
+  @include carbon--breakpoint('lg') {
+    width: 50%;
+  }
 }
 
 .#{$prefix}--typeset-style-screen-width-label {
@@ -130,10 +143,16 @@
   padding-right: $spacing-05;
   display: grid;
   grid-template-columns: auto 1fr auto;
+  width: 100%;
 
   @include carbon--breakpoint('md') {
     border-top: none;
     border-left: 1px solid $carbon--gray-20;
+    width: 37.5%;
+  }
+
+  @include carbon--breakpoint('lg') {
+    width: 50%;
   }
 }
 
